feat(day3): solution

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "start1.2": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/1/part2/index.ts",
     "start2.1": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/2/part1/index.ts",
     "start2.2": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/2/part2/index.ts",
-    "start3": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/3/index.ts",
+    "start3.1": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/3/part1/index.ts",
+    "start3.2": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/3/part2/index.ts",
     "start4": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/4/index.ts",
     "start5": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/5/index.ts",
     "start6": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/6/index.ts",
