--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "start2.2": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/2/part2/index.ts",
     "start3.1": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/3/part1/index.ts",
     "start3.2": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/3/part2/index.ts",
-    "start4": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/4/index.ts",
+    "start4.1": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/4/part1/index.ts",
+    "start4.2": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/4/part2/index.ts",
     "start5": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/5/index.ts",
     "start6": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/6/index.ts",
     "start7": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/7/index.ts",
