fail(day5): failed

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "start3.2": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/3/part2/index.ts",
     "start4.1": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/4/part1/index.ts",
     "start4.2": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/4/part2/index.ts",
-    "start5": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/5/index.ts",
+    "start5.1": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/5/part1/index.ts",
+    "start5.2": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/5/part2/index.ts",
     "start6": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/6/index.ts",
     "start7": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/7/index.ts",
     "start8": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/8/index.ts",
