--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "start5.brute": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/5/part2/brute.ts",
     "start6.1": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/6/part1/index.ts",
     "start6.2": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/6/part2/index.ts",
-    "start7": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/7/index.ts",
+    "start7.1": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/7/part1/index.ts",
+    "start7.2": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/7/part2/index.ts",
     "start8": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/8/index.ts",
     "start9": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/9/index.ts",
     "start10": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/10/index.ts",
