--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "typescript": "^5.3.2"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.11",
     "@types/node": "^20.10.1",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.1",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1"
   },
   "scripts": {
@@ -43,6 +46,7 @@
     "start21": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/21/index.ts",
     "start22": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/22/index.ts",
     "start23": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/23/index.ts",
-    "start24": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/24/index.ts"
+    "start24": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/24/index.ts",
+    "test": "jest"
   }
 }
