feat(day8): solution

--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "start6.2": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/6/part2/index.ts",
     "start7.1": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/7/part1/index.ts",
     "start7.2": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/7/part2/index.ts",
-    "start8": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/8/index.ts",
+    "start8.1": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/8/part1/index.ts",
+    "start8.2": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/8/part2/index.ts",
     "start9": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/9/index.ts",
     "start10": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/10/index.ts",
     "start11": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/11/index.ts",
